#--------------------------------------------------------------------------
# File and Version Information:
#  $Id$
#
# Description:
#  ChangeLog file for package psddl
#------------------------------------------------------------------------

Package author: Andy Salnikov

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V00-05-09
2013-03-07 Andy Salnikov
- refactoring of DdlHdf5Data, moved piece of stuff to DdlHdf5DataHelpers
- initial implementation for array datasets, compiles, not tested

Tag: V00-05-08
2013-03-04 Andy Salnikov
- removed Id_QuartzConfig from ignored types
- order cases in switch by name, will be easier to track changes

Tag: V00-05-07
2013-03-04 Andy Salnikov
- more progress on HDF5 generator
- new backend pds2psana-dispatch which generates typeid-dispatch code

Tag: V00-05-06
2013-03-02 Andy Salnikov
- in python generator add boost/python.hpp include at the top of generated
  files to suppress compilation warnings about redefined macros

Tag: V00-05-05
2013-02-26 Andy Salnikov
- small improvements for HDF5 generation

Tag: V00-05-04
2013-02-26 Andy Salnikov
- continuing work on HDF5 code generation
- re-working constuctor stuff, need more flexible mapping of methods 
  to constructor arguments

Tag: V00-05-03
2013-02-12 Andy Salnikov
- use shared_ptr as a holder instead of generating wrapper classes
- do not generate headers, they are not needed
- *_list methods removed

Tag: V00-05-02
2013-02-07 Andy Salnikov
- reduce volume of generated code by using template classes/functions

Tag: V00-05-01
2013-02-06 Andy Salnikov
- removed _import_array() from generated code

Tag: V00-05-00
2013-02-06 Andy Salnikov
- big changes in python generator, see details in psddl_python

Tag: V00-04-01
2013-02-05 Andy Salnikov
- update DdlPsanaDoc for ndarray return types

Tag: V00-04-00
2013-01-31 Andy Salnikov
- changes in python getter interfaces, update generator

Tag: V00-03-00
2013-01-30 Andy Salnikov